gmail/style.css
/* ... */
/* Max width conversation */
html.simpl.splitView .AO .aeF > .nH {
	margin: 0px; /*40px auto 0 auto;*/
	max-width: 100%;
}
/* Larger max-width for Preview pane
 * TODO: I shouldn't do this for horizontal preview pane
 * But I don't differentiate yet.
 */
@media only screen and (min-width: 1441.98px) {
	html.simpl.splitView .AO .aeF > .nH {
		max-width: 2000px;
		margin: 0 auto;
	}
}

/* Add right margin to inbox tabs */
html.simpl.splitView .aeF .aKh {
	margin-right: 16px;
}

/* No bottom border on app bar */
html.simpl.splitView .aiw {
	box-shadow: none;
	-webkit-box-shadow: none;
}

/* Give view full height */
/* BUG #114: we should only apply this to vertical split pane */
html.simpl.splitView .apg .age {
	/* Normally... */
	height: calc(100vh - 64px);

	/* In default inbox, there are tabs */
	/*height: calc(100vh - 119px);*/
}

/* Add padding to bottom of conversation view */
/* BUG: Somehow, this isn't working in horizontal split pane */
html.simpl.splitView .aNW td.Bu:not(.y3) {
	padding-bottom: 200px;
}

/* Drop the double border between panes to a single border */
html.simpl.splitView .apj {
	border-right: none;
}
html.simpl.splitView .aph {
	border-bottom: none;
}

/* Below 1250px, hide the pagination controls */
@media only screen and (max-width: 1250.98px) {
	html.simpl.splitView:not(.hideSearch) .aE3 .G-atb .aqJ > div:not([gh="s"]) {
		display: none;
	}
}




/* ==================================================
 * CONVERSATION VIEW
 */

/* Not sure why, but sometimes this div below the conversation gets 440px bottom padding */
html.simpl .pfiaof {
	padding-bottom: 0px !important;
}

/* Round corners of conversation for themes */
html.simpl .bAn {
	border-radius: 8px;
}

/* Dim print and pop-out icons in conversation view */
html.simpl .bAn .ade {
	opacity: 0.2;
	transition: opacity 0.4s ease-in 0s;
}
html.simpl .bAn .ade:hover {
	opacity: 1;
}

/* Slightly larger message body text in conversation view and composer */
html.simpl div[role="textbox"],
html.simpl div[role="listitem"] .a3s,
html.simpl div[role="listitem"] .g6,
html.simpl div[role="listitem"] div:not(.ajA) h3.iw {
	font-size: .875rem;
}

/* Dim from email address in conversation view */
html.simpl div[role="listitem"] h3.iw .go {
	opacity: 0.5;
}

/* Clean up "New message from" banner */
html.simpl .ata-asE {
	right: auto;
	left: 24px;
	bottom: 24px;
	font-size: .875rem;
	color: #fff;
	background-color: #202124;
	padding: 18px;
	border: none;
	box-shadow: 0 1px 3px 0 rgba(60,64,67,0.302), 0 4px 8px 3px rgba(60,64,67,0.149);
}
html.simpl .ata-asE > span:first-child:not(.ata-asJ) {
	padding-right: 12px;
}
html.simpl .ata-asE .ata-asJ {
	color: #8ab4f8;
	padding-left: 12px;
}




/* ==================================================
 * COMPOSER
 */

/* A touch more padding above the from field and subject */
html.simpl .dw form.bAs,
html.simpl .aSs .aSt .I5 > form.bAs {
	padding-top: 6px;
}

/* Make full screen composer less wide */
html.simpl .aSs > .aSt {
	width: 900px !important;
	left: calc(50vw - 450px) !important;
}
html.simpl .aSs .aDg > .aDj {
	width: 867px !important;
	left: calc(50vw - 435px) !important;
}

/* Make scrim behind full screen composer darker */
html.simpl .aSs {
	background-color: rgba(0,0,0,.7);
}


/* Simplify formatting options. Remove shadow and make full width. */
html.simpl .aoI .Ur {
	width: 100%;
	margin: auto;
	box-sizing: border-box;
	background-color: white;
}

html.simpl .aoI .Ur div[aria-label='Formatting options'] {
	width: 100%;
	box-shadow: none;
	box-sizing: border-box;
	border-radius: 0;
	border-top: 1px solid #dadcdf;
}

/* BUGS: moving stuff around here is causing problems */
/* Move extended compose buttons inline
html.simpl .aSs .aDl > .Ur,
html.simpl .aSs .aDn > .aDl > .Ur,
html.simpl .aSs .aDi > .aDl > .Ur {
	left: 205px !important;
	bottom: -54px !important;
}
html.simpl .aSs .aZ > .J-Z {
	box-shadow: none !important;
	-webkit-box-shadow: none !important;
}
*/

/* Hide useless buttons in full screen compose and move bar inline
html.simpl .aSs .aZ .J-Z-I[command^="+undo"],
html.simpl .aSs .aZ .J-Z-I[command^="+redo"],
html.simpl .aSs .aZ .J-Z-I[command^="+bold"],
html.simpl .aSs .aZ .J-Z-I[command^="+italic"],
html.simpl .aSs .aZ .J-Z-I[command^="+underline"],
html.simpl .aSs .btC .oc.gU,
html.simpl .aSs .a8X .wG[command^="docs"],
html.simpl .aSs .a8X .wG[command^="op.money"] {
	display: none !important;
}
*/



/* ================================================== */
/* ADD-ONS RIGHT SIDE PANE */

/* Shrink the add-on chooser to a small FAB when not hovered on */
html.simpl .bAw {
	position: fixed;
	right: 47px !important;
	bottom: 100px !important;
	height: 36px !important;
	width: 36px !important;
	min-width: 36px !important;
	overflow-y: hidden;
	overflow-x: hidden;
	border-radius: 27px;
	box-shadow: 0 1px 2px 0 rgba(60,64,67,0.3) !important;
	transition: height 0s ease-out 0s;
	transition: width 0s ease-out 0s;
	transition: right 0s ease-out 0s;
	background-color: rgba(255,255,255,.9);
	background-image: url("https://www.gstatic.com/images/icons/material/system/2x/more_horiz_grey600_24dp.png");
	background-repeat: no-repeat;
	background-position: 6px 7px;
	background-size: 24px;
}
html.simpl.darkTheme .bAw {
	background-color: rgba(51,51,51,.9);
	background-image: url("https://www.gstatic.com/images/icons/material/system/2x/more_horiz_white_24dp.png");
}

/* Hide everything inside the add-ons menu until you hover on it */
html.simpl .bAw > div:first-child {
	display: none;
}

/* Show add-ons when you hover over the menu */
:root {
	--add-on-height: 168px;
}
html.simpl .bAw:hover {
	background: initial;
	right: 38px !important;
	width: 54px !important;
	height: var(--add-on-height) !important;
}
html.simpl .bAw:hover > div:first-child {
	display: flex !important;
	border-left: 0px;
	border-radius: 16px;
	background-color: #fff;
}
html.simpl .bAw > div:first-child:hover > div {
	display: block;
	margin: 0px;
	opacity: 1;
}
/* ... */

